implemented book api
